test/tests/stages/18_structures/invalid_types/extra_credit/incomplete_unions/sizeof_incomplete_union_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  ;
  return
  sizeof
  (
  union
  identifier(u)
  )
  ;
  }
